
    o	getClipboardFormats() by default returns a human-readable
	character vector, but will give numeric output with new
	arguent 'numeric = TRUE'.
	
    o	The MSVC run-time (used by MinGW) has a global variable to
	determine whether files default to text or binary mode.  R now
	overrides this setting so that files are always read in text
	mode by default: this is relevant to embedded uses of R.


BUILDING R

    o	Support for the ACML BLAS has been withdrawn (there is no
	version of ACML 4.0.0 for gcc under Windows, and none at all
	for gfortran).

    o	We now presume version 2.7.0 of Rtools.exe, in which gcc is
	version 4.2.1.

    o	We now assume Tcl/Tk version 8.5.x (included in version 2.7.0
	of Rtools.exe).  Earlier versions can be selected in MkRules.



	**************************************************
	*						 *
	*	       2.6 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.6.1 patched

WORKAROUNDS

    o	We set some environment variables to work around hangs in Rgui
	when packages (e.g. tseries) use Fortran WRITE calls.  The
	Fortran output will be written to a file named 'fort.6' in the
	working directory.

    o	Browsing for a directory in choose.dir() and the Rgui
	'Change Dir...' menu item now works around Vista's confusion
	about 'desktop' by starting at 'Computer' on Vista/Server 2008.


BUG FIXES

    o	If a graphics window was opened in MDI mode while the console
	was zoomed, it would not be initialized properly.
	
    o	The graphics window placement parameters on the GUI preferences
    	dialog were being ignored.

    o	The text field in a drop-down list (as used in GUI preferences
	for fonts) will now scroll horizontally when a user enters
	text that exceeds the display width.



		CHANGES IN R VERSION 2.6.1


PACKAGE INSTALLATION

    o	Fortran code in packages is no longer compiled with -Wall, as
	this is not done on other platforms.


OTHERS
