@@ -196,6 +196,9 @@ OTHERS
 	determine whether files default to text or binary mode.  R now
 	overrides this setting so that files are always read in text
 	mode by default: this is relevant to embedded uses of R.
+	
+    o	The shortcuts created by the installer now start R in the user's
+	personal folder (typically 'My Documents').
 
 
 BUILDING R
